results/classifier/zero-shot/111/review/70868267
semantic: 0.170
PID: 0.112
files: 0.106
device: 0.098
other: 0.090
graphic: 0.088
debug: 0.084
performance: 0.062
permissions: 0.049
network: 0.035
socket: 0.031
boot: 0.029
vnc: 0.028
KVM: 0.018
files: 0.171
PID: 0.149
debug: 0.149
network: 0.144
other: 0.059
semantic: 0.053
device: 0.051
socket: 0.046
performance: 0.038
graphic: 0.035
vnc: 0.032
boot: 0.030
permissions: 0.022
KVM: 0.021

[Qemu-devel] [BUG] Failed to compile using gcc7.1

Hi all,

After upgrading gcc from 6.3.1 to 7.1.1, qemu can't be compiled with gcc.

The error is:

------
  CC      block/blkdebug.o
block/blkdebug.c: In function 'blkdebug_refresh_filename':
block/blkdebug.c:693:31: error: '%s' directive output may be truncated
writing up to 4095 bytes into a region of size 4086
[-Werror=format-truncation=]
"blkdebug:%s:%s", s->config_file ?: "",
                               ^~
In file included from /usr/include/stdio.h:939:0,
                 from /home/adam/qemu/include/qemu/osdep.h:68,
                 from block/blkdebug.c:25:
/usr/include/bits/stdio2.h:64:10: note: '__builtin___snprintf_chk'
output 11 or more bytes (assuming 4106) into a destination of size 4096
return __builtin___snprintf_chk (__s, __n, __USE_FORTIFY_LEVEL - 1,
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        __bos (__s), __fmt, __va_arg_pack ());
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [/home/adam/qemu/rules.mak:69: block/blkdebug.o] Error 1
------

It seems that gcc 7 is introducing more restrict check for printf.
If using clang, although there are some extra warning, it can at least
pass the compile.
Thanks,
Qu

